Kubernetes/echo-server-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: echo-server-deployment
  annotations:
    kubernetes.io/change-cause: "New release (version v2)"
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
  replicas: 5
  selector:
    matchLabels:
      app-name: echo-server
  template:
    metadata:
      namespace: training
      name: echo-server-pod
      labels:
        app-name: echo-server
    spec:
      containers:
        - name: echo-server
          image: landrzejewski/echo-server:v2
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 128M
            limits:
              memory: 512M
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 5
            periodSeconds: 2
            failureThreshold: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 5
            periodSeconds: 2
            failureThreshold: 3
            successThreshold: 10
            timeoutSeconds: 2
