Kubernetes/echo-server-pod-with-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: echo-server-pod
  labels:
    version: v1
    env: production
  annotations:
    training: 'true'
spec:
  nodeSelector:
    type: primary
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
      resources:
        requests:
          memory: 128M
        limits:
          memory: 512M
