Kubernetes/nginx-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: training
  name: nginx-stateful-set
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: nginx
  serviceName: nginx-service
  template:
    metadata:
      labels:
        app-name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.23.0-alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-volume-claim
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: nginx-volume-claim
      spec:
        resources:
          requests:
            - storage: 1G
        accessModes:
          - ReadWriteOnce
