Kubernetes/updater-pod-with-volume.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: updater-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.23.0-alpine
      ports:
        - containerPort: 80
      volumeMounts:
        - name: storage
          mountPath: /usr/share/nginx/html
    - name: updater
      image: landrzejewski/updater:v2
      args:
        - '60'
#      env:
#        - name: INTERVAL
#          #value: '60'
#          valueFrom:
#            configMapKeyRef:
#              name: updater-config-map
#              key: INTERVAL
      volumeMounts:
        - name: storage
          mountPath: /var/htdocs
        - name: config
          mountPath: /config

  volumes:
    - name: storage
#      hostPath:
#        path: /tmp/storage

#      emptyDir:
#        medium: Memory

#      glusterfs:
#        endpoints: gfs-volume-service
#        path: gv0
#        readOnly: false

      persistentVolumeClaim:
        claimName: updater-volume-claim

    - name: config
      configMap:
        name: updater-config-map
