Kubernetes/echo-server-service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: echo-server-service
spec:
  #type: ClusterIP
  selector:
    app-name: echo-server
  ports:
    - port: 80
      targetPort: http #8080
