Kubernetes/echo-server-service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: echo-server-service
spec:
  type: LoadBalancer
  #externalTrafficPolicy: Local
  selector:
    app-name: echo-server
  ports:
    - port: 80
      targetPort: http #8080
      nodePort: 30000
