Kubernetes/sqrt-service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: sqrt-service
spec:
  selector:
    app-name: sqrt
  ports:
    - port: 80
      targetPort: http #8080
